[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/heoh/pstest"

[project]
name = "pstest"
version = "{{VERSION_PLACEHOLDER}}"
maintainers = [{name = "HeoHeo", email = "h0h6h2h5@gmail.com"}]
description = "Python unittest tools for Problem Solving"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["unittest", "test", "testing", "ps", "problem", "solving", "judge"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = []
